--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
 <body>
   <div class="container">
-    <h1>New project</h1>
+    <h1>Async</h1>
+    <div id="app">
+      <ul id="posts"></ul>
+    </div>
   </div>
 
 
