--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
   <title>JS project</title>
   <link rel="stylesheet" href="./style/style.css">
   <!-- <script src="./js/main.js" defer></script> -->
-  <script src="./js/callback.js" defer></script>
+  <!-- <script src="./js/callback.js" defer></script> -->
+  <!-- <script src="./js/posts.js" defer></script> -->
+  <script src="./js/promise.js" defer></script>
 </head>
 
 <body>
   <div class="container">
     <h1>Async</h1>
     <div id="app">
-      <ul id="posts"></ul>
+      <ul id="posts">
+
+      </ul>
     </div>
   </div>
 
