--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <!-- <script src="./js/callback.js" defer></script> -->
   <!-- <script src="./js/posts.js" defer></script> -->
   <!-- <script src="./js/promise.js" defer></script> -->
-  <script src="./js/promise-all.js" defer></script>
+  <!-- <script src="./js/promise-all.js" defer></script> -->
+  <script src="./js/async-await.js" defer></script>
 </head>
 
 <body>
