--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
   <!-- <script src="./js/promise.js" defer></script> -->
   <!-- <script src="./js/promise-all.js" defer></script> -->
   <script src="./js/async-await.js" defer></script>
+  <script src="./js/setInterval-time.js" defer></script>
 </head>
 
 <body>
   <div class="container">
     <h1>Async</h1>
+    <h3 id="time"></h3>
     <div id="app">
       <ul id="posts">
 
