--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- <script src="./js/posts.js" defer></script> -->
   <!-- <script src="./js/promise.js" defer></script> -->
   <!-- <script src="./js/promise-all.js" defer></script> -->
-  <script src="./js/async-await.js" defer></script>
+  <!-- <script src="./js/async-await.js" defer></script> -->
   <script src="./js/setInterval-time.js" defer></script>
 </head>
 
